css/main.css
@import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500|Titillium+Web");
body {
  font-family: "Roboto", "Arial";
  background-color: #fcfcfc;
  color: #3b494c; }

h1, h2, h3, h4 {
  font-family: "Titillium Web"; }

h1 {
  font-size: 3.5rem;
  font-weight: 400;
  letter-spacing: .35rem; }

h2 {
  font-size: 2.5rem;
  font-weight: 400;
  letter-spacing: .35rem; }

h3 {
  font-size: 1.75rem;
  font-weight: 400;
  letter-spacing: .2rem; }

.landingContainer {
  margin-bottom: 3em;
  background-color: #fcfcfc;
  height: 100vh; }

.tux {
  display: block;
  margin: 2rem auto; }

.custom-toggler .navbar-toggler-icon {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='#3fc1ff' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }

.custom-toggler.navbar-toggler {
  border: none !important; }

.custom-toggler:focus {
  outline: none; }

ul {
  list-style-type: none; }

.navlist {
  padding: 1rem;
  background-image: linear-gradient(0deg, rgba(42, 123, 255, 0.9), rgba(63, 193, 255, 0.9));
  text-align: right;
  float: right;
  margin-right: 15px; }

nav.fill ul li a {
  position: relative; }

nav.fill ul li a, nav.fill ul li a:after, nav.fill ul li a:before {
  transition: all .5s; }

nav.fill ul li a:after {
  position: absolute;
  bottom: -.7rem;
  left: 0;
  right: 0;
  margin: auto;
  width: 0%;
  content: '';
  color: transparent;
  background: #fcfcfc;
  height: 1px; }

nav.fill ul li a:hover:after {
  width: 100%; }

nav a:hover {
  color: #fcfcfc; }

nav li a {
  font-family: "Titillium Web";
  text-decoration: none;
  font-weight: 800;
  color: #fcfcfc;
  line-height: .4;
  letter-spacing: .1rem;
  padding: 0 !important;
  margin: 0 .5rem; }

li {
  font-size: 16px;
  display: inline-block;
  color: #3b494c; }

li:not(:last-child) {
  margin-right: 15px; }

.landingWindows {
  margin-top: 7rem; }

.landingWindow {
  height: 14rem; }

#artWindow {
  background-image: linear-gradient(-90deg, rgba(42, 123, 255, 0.7), rgba(63, 193, 255, 0.7)), url("../images/art/wizard.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position-y: 50%; }

#artWindow:hover {
  background-image: linear-gradient(-90deg, rgba(42, 123, 255, 0), rgba(63, 193, 255, 0)), url("../images/art/wizard.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position-y: 50%;
  transition: .5s ease-in; }

#devWindow {
  background-image: linear-gradient(135deg, rgba(42, 123, 255, 0.7), rgba(63, 193, 255, 0.7)), url("../images/pantry-landing.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position-y: 50%;
  transition: background-image 0.9s ease-in-out; }

#devWindow:hover {
  background-image: linear-gradient(135deg, rgba(42, 123, 255, 0), rgba(63, 193, 255, 0)), url("../images/pantry-landing.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position-y: 50%; }

#resumeWindow {
  background-image: linear-gradient(45deg, rgba(42, 123, 255, 0.7), rgba(63, 193, 255, 0.7)), url("../images/twb.png");
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center; }

#resumeWindow:hover {
  background-image: linear-gradient(-45deg, rgba(42, 123, 255, 0), rgba(63, 193, 255, 0)), url("../images/twb.png");
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  transition: .5s ease-in; }

#aboutWindow {
  background-image: linear-gradient(-45deg, rgba(42, 123, 255, 0.7), rgba(63, 193, 255, 0.7)), url("../images/sketch.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center; }

#aboutWindow:hover {
  background-image: linear-gradient(45deg, rgba(42, 123, 255, 0), rgba(63, 193, 255, 0)), url("../images/sketch.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  transition: .5s ease-in; }

.aboutOverflow {
  overflow: hidden; }

.landingWindow:hover .landingText {
  display: none; }

.landingText {
  color: white;
  font-family: "Titillium Web";
  font-size: 24px;
  font-weight: 800;
  letter-spacing: 4px;
  word-wrap: break-word; }

#devSection {
  background-image: linear-gradient(360deg, #121213, #252525);
  color: #fcfcfc;
  padding-top: 3.5rem; }

.pantrySection, .bearArmsSection, .groupProjectsSection {
  margin-bottom: 5rem;
  margin-top: 5rem; }

.groupProjectsSection a {
  color: #fcfcfc; }

.appName {
  letter-spacing: 5px;
  display: inline-block;
  padding-bottom: .5rem;
  margin-bottom: 1.5rem;
  border-bottom: 2px solid #3fc1ff; }

.groupProject p {
  margin-bottom: 5rem; }

.groupProjectTitle {
  letter-spacing: 2px;
  padding-bottom: .5rem;
  display: inline-block;
  margin-bottom: 1rem; }

.blueText {
  color: #3fc1ff; }

.appDescription li {
  color: #91a3b1;
  display: block; }

.appDescription p {
  font-size: 20px;
  margin-bottom: 2em; }

.devIcon {
  width: 100%;
  margin-top: 3em; }

.projectButton {
  background-color: transparent;
  border: 2px solid #fcfcfc;
  margin: -1rem 1rem 1rem -1rem;
  height: 5rem;
  width: 5rem;
  padding: 1rem;
  transform: rotate(45deg);
  color: #fcfcfc;
  text-decoration: none;
  font-family: "Titillium Web";
  letter-spacing: 2px;
  font-weight: 800;
  cursor: pointer; }

.projectButton:hover {
  color: #fcfcfc;
  border: none;
  background-image: linear-gradient(-45deg, #2a7bff, #3fc1ff);
  transition: ease-in .2s;
  box-shadow: 15px 15px 10px rgba(0, 0, 0, 0.4);
  transform: rotate(45deg) translateY(-4px) translateX(-4px); }

.projectButton:active {
  transform: rotate(45deg) translateY(4px) translateX(4px);
  box-shadow: none;
  transition: ease-in-out .1s; }

.textRotator {
  transform: rotate(-45deg);
  margin-bottom: 0; }

.workList {
  padding-left: 0; }

.workList li {
  margin-bottom: .5rem;
  display: block;
  color: #91a3b1; }
/* ... */

